--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
 .nav-container {
   display: flex;
   align-items: center;
-  background-color: grey;
+  background-color: #ffffff;
   height: 100px;
   margin-top: -1px;
   padding: 10px;
