--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,3 +16,9 @@
   margin-left: auto;
   padding-right: 10px;
 }
+
+.logout-btn {
+  border: 1px solid black;
+  background-color: transparent;
+  width: 100px;
+}
