--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
-html {
+body {
   background: linear-gradient(
       45deg,
       rgba(201, 101, 113, 0.831) 0%,
