--- a/src/components/MyPractice.css
+++ b/src/components/MyPractice.css
@@ -42,7 +42,7 @@ li {
   text-align: center;
   padding: 1em 1em;
   border-bottom: solid 1px #7f8c8d;
-  color: #34495e;
+  color: #ffffff;
 }
 
 .rowspan {
