--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -17,8 +17,26 @@
   padding-right: 10px;
 }
 
-.logout-btn {
+.nav-btn {
   border: 1px solid black;
   background-color: transparent;
   width: 100px;
+  color: black;
+  font-size: .8em;
+  padding: 10px;
+  margin-right: 10px;
+  text-align: center;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.nav-btn:hover {
+  background-color: #7ed6df;
+  transition: .5s;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
